player data typo fix

--- a/static/index.html
+++ b/static/index.html
@@ -241,7 +241,7 @@
                             ><span class="playerInGame"></span>
                         </p>
                         <p>
-                            <span>onlineSince: </span
+                            <span>online since: </span
                             ><span class="playerOnlineSince"></span>
                         </p>
                         <p>
