--- a/static/index.html
+++ b/static/index.html
@@ -497,24 +497,55 @@
                                 !s.rconConnected || !p.inGame;
                             row.querySelector(".btnKick").addEventListener(
                                 "click",
-                                async (e) => {
-                                    console.log(p.guid);
-                                    await fetch(`/api/servers/${s.id}/kick`, {
+                                (e) =>
+                                    fetch(`/api/servers/${s.id}/kick`, {
                                         method: "POST",
                                         body: JSON.stringify({
                                             guid: p.guid,
                                         }),
-                                    });
-                                }
+                                    })
                             );
                             row.querySelector(".btnBan").disabled =
                                 !s.rconConnected ||
                                 p.category === "Blacklisted";
+                            row.querySelector(".btnBan").addEventListener(
+                                "click",
+                                (e) =>
+                                    fetch(`/api/servers/${s.id}/setcategory`, {
+                                        method: "POST",
+                                        body: JSON.stringify({
+                                            guid: p.guid,
+                                            category: "Blacklisted",
+                                        }),
+                                    })
+                            );
                             row.querySelector(".btnWhitelist").disabled =
                                 !s.rconConnected ||
                                 p.category === "Whitelisted";
+                            row.querySelector(".btnWhitelist").addEventListener(
+                                "click",
+                                (e) =>
+                                    fetch(`/api/servers/${s.id}/setcategory`, {
+                                        method: "POST",
+                                        body: JSON.stringify({
+                                            guid: p.guid,
+                                            category: "Whitelisted",
+                                        }),
+                                    })
+                            );
                             row.querySelector(".btnReset").disabled =
                                 !s.rconConnected || p.category === "Unlisted";
+                            row.querySelector(".btnReset").addEventListener(
+                                "click",
+                                (e) =>
+                                    fetch(`/api/servers/${s.id}/setcategory`, {
+                                        method: "POST",
+                                        body: JSON.stringify({
+                                            guid: p.guid,
+                                            category: "Unlisted",
+                                        }),
+                                    })
+                            );
 
                             field
                                 .querySelector(".playerListing")
