fully working save management

--- a/static/index.html
+++ b/static/index.html
@@ -226,6 +226,10 @@
                     </div>
                 </div>
                 <h4>Saves</h4>
+                <p>
+                    <button class="btnSaveGame btnGreen">Save</button>
+                    <button class="btnNewGame btnGreen">New Game</button>
+                </p>
                 <div class="listing saveListing">
                     <div class="listingRow">
                         <div class="listingColumns">
@@ -668,7 +672,7 @@
                         row.children[0].children[1].style.display =
                             id in expanded ? "block" : "none";
 
-                        // buttons
+                        // load button
                         row.querySelector(".btnLoad").addEventListener(
                             "click",
                             (e) =>
@@ -685,6 +689,25 @@
                             .querySelector(".saveListing")
                             .appendChild(row);
                     });
+
+                // save buttons
+                field.querySelector(".btnSaveGame").addEventListener(
+                    "click",
+                    (e) =>
+                        fetch(`/api/servers/${s.id}/gamesave`, {
+                            method: "POST"
+                        })
+                );
+                field.querySelector(".btnNewGame").addEventListener(
+                    "click",
+                    (e) =>
+                        fetch(`/api/servers/${s.id}/gamenew`, {
+                            method: "POST",
+                            body: JSON.stringify({
+                                name: prompt("Enter New Save Name:")
+                            }),
+                        })
+                );
 
                 // action buttons
                 field
