--- a/static/index.html
+++ b/static/index.html
@@ -704,7 +704,7 @@
                         fetch(`/api/servers/${s.id}/gamenew`, {
                             method: "POST",
                             body: JSON.stringify({
-                                name: prompt("Enter New Save Name:")
+                                name: prompt("Enter New Save Name:").toUpperCase()
                             }),
                         })
                 );
