implement silent shutdown button

--- a/static/index.html
+++ b/static/index.html
@@ -193,6 +193,7 @@
         <br />
 
         <button id="btnShutdown">Shutdown</button>
+        <button id="btnSilentShutdown">Silent Shutdown</button>
 
         <template id="server">
             <fieldset>
